<resources>
  <string name="app_name">Running App</string>
    <string name="running_app">Running App</string>
    <string name="sort_by">Sort by:</string>
  <string-array name="filter_options">
    <item>Date</item>
    <item>Running Time</item>
    <item>Distance</item>
    <item>Average Speed</item>
    <item>Calories Burned</item>
  </string-array>
  <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBpgzq1tsmQoAz5o_GdnsSolpN4ydHB83c</string>
  <string name="apply_changes">Apply Changes</string>
  <string name="your_name">Your Name</string>
  <string name="your_weight">Your Weight</string>
  <string name="welcome">Welcome ! Please Enter Your Name And Weight</string>
  <string name="kg">Kg</string>
  <string name="get_started">Get Started</string>
  <string name="total_distance">Total Distance</string>
  <string name="empty_km">0km</string>
  <string name="total_time">Total Time</string>
  <string name="empty_total_time">00:00:00</string>
  <string name="total_calories_burned">Total Calories Burned</string>
  <string name="empty_kcal">0kcal</string>
  <string name="average_speed">Average Speed</string>
  <string name="empty_km_h">0km/h</string>
  <string name="start">Start</string>
  <string name="stop">Stop</string>
  <string name="date">DATE</string>
  <string name="time">TIME</string>
  <string name="distance">DISTANCE</string>
  <string name="avgspeed">AVGSPEED</string>
  <string name="calories">CALORIES</string>
  <string name="finish_run">Finish Run</string>
  <string name="let_s_go_username">Let\'s go, USERNAME!</string>
    <string name="your_runs">Your Runs</string>
  <string name="settings">Settings</string>
  <string name="statistics">Statistics</string>
</resources>