<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <ImageView
        android:id="@+id/img_run"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/date"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toStartOf="@+id/tv_time"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_run" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/time"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toStartOf="@+id/tv_distance"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_date"
        app:layout_constraintTop_toBottomOf="@+id/img_run" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/distance"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toStartOf="@+id/tv_avg_speed"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_time"
        app:layout_constraintTop_toBottomOf="@+id/img_run" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_avg_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/avgspeed"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toStartOf="@+id/tv_calories"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_distance"
        app:layout_constraintTop_toBottomOf="@+id/img_run" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_calories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/calories"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_avg_speed"
        app:layout_constraintTop_toBottomOf="@+id/img_run" />

</androidx.constraintlayout.widget.ConstraintLayout>