<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/amaranth_italic"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/til_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/your_name"
        android:textColorHint="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/amarante"
            android:textColor="@color/colorPrimary"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/your_weight"
        android:textColorHint="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@+id/til_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/amarante"
            android:textColor="@color/colorPrimary"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kg"
        android:layout_marginStart="8dp"
        android:padding="8dp"
        android:textColor="@color/hot_pink"
        android:textSize="22sp"
        android:textStyle="italic"
        app:layout_constraintTop_toTopOf="@+id/til_weight"
        app:layout_constraintBottom_toBottomOf="@+id/til_weight"
        app:layout_constraintStart_toEndOf="@+id/til_weight" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:src="@drawable/ic_excercise_run"
        app:layout_constraintTop_toBottomOf="@+id/til_weight"
        app:layout_constraintBottom_toBottomOf="@+id/cl_start_container" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_start_container"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:id="@+id/ll_continue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/tv_get_started"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/amarante"
                android:padding="8dp"
                android:text="@string/get_started"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/img_arrow"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/ic_arrow" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>